fix: dropdown items of navbar will not be overlapped now

--- a/src/assets/style/nav.scss
+++ b/src/assets/style/nav.scss
@@ -79,14 +79,29 @@ nav {
     visibility: hidden;
     z-index: 10;
     position: absolute;
-    top:100%;
-    left:0;
+    top: 100%;
+    left: 0;
     width: 200px;
     border-radius: 3px;
     box-shadow: var(--dropdown-shadow);
     transform: translateY(-5px);
     opacity: 0;
     transition: opacity .3s, transform .3s cubic-bezier(0.19, 1, 0.22, 1);
+    li {
+      list-style: none;
+      margin-bottom: 0;
+      &:hover {
+        background-color: var(--bg-teritary);
+      }
+      a {
+        justify-content: flex-start;
+        font-size: .9rem;
+        padding: 8px 15px;
+        &:after {
+          opacity: 0;
+        }
+      }
+    }
     &:before {
       content: "";
       position: absolute;
@@ -106,18 +121,6 @@ nav {
       opacity: .3;
       display: block;
       margin-top: 10px;
-    }
-
-    a {
-      justify-content: flex-start;
-      font-size: .9rem;
-      padding: 8px 15px;
-      &:hover {
-        background-color: var(--bg-teritary);
-      }
-      &:after {
-        opacity: 0;
-      }
     }
   }
 }
@@ -161,6 +164,9 @@ nav.mobile-nav {
       margin-top: -5px;
       &:before {
         display: none;
+      }
+      a {
+        padding: 3px 15px;
       }
       a:hover {
         background-color: var(--bg);
